syntax = "proto3";
package veracity.aggregate;

import "github.com/dogmatiq/interopspec/envelopespec/envelope.proto";

option go_package = "github.com/dogmatiq/veracity/internal/aggregate";

message JournalRecord {
  oneof OneOf { RevisionRecord revision = 1; }
}

message RevisionRecord {
  string command_id = 1;
  repeated RevisionAction actions = 2;
}

message RevisionAction {
  oneof OneOf {
    RecordEventAction record_event = 1;
    LogAction log = 2;
    DestroyAction destroy = 3;
  }
}

message RecordEventAction { dogma.interop.v1.envelope.Envelope envelope = 1; }
message LogAction { string message = 1; }
message DestroyAction { bool is_cancelled = 1; }
